--- a/stene.html
+++ b/stene.html
@@ -216,7 +216,7 @@
                     <p class="mb-5">
                         Ozvěte se nám přes <a href="">formulář</a>,
                         <br> přes telefonní číslo: 111 222 333
-                        <br> nebo napište na E-mail: zvitatka@mail.cz – rádi zodpovíme všechny dotazy a
+                        <br> nebo napište na E-mail: zviratka@mail.cz – rádi zodpovíme všechny dotazy a
                         pomůžeme s výběrem štěněte.
                     </p>
                     <h2 class="h2">Návšťěva/záloha</h2>
