--- a/kontakt.html
+++ b/kontakt.html
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Domů</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Naše zvířata</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Štěňata</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">O plemeni + péče</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Kontakt a rezervace</a></li>
+                    <li class="nav-item"><a class="nav-link" href="nase_zvirata.html">Naše zvířata</a></li>
+                    <li class="nav-item"><a class="nav-link" href="stene.html">Štěňata</a></li>
+                    <li class="nav-item"><a class="nav-link" href="o_plemeni.html">O plemeni + péče</a></li>
+                    <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt a rezervace</a></li>
                 </ul>
             </div>
         </div>
@@ -119,13 +119,43 @@
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
               
-                 <a href="#" class="btn btn-outline-dark w-100">
+                 <a href="#" class="btn btn-outline-dark w-100 mb-2">
                  <p class="fs-5 mt-3"> Odeslat formulář</p>   
                 </a>
-            
+            </section>
             </form>
+<section class="container">
+<h2 class="h1 text-center mb-0 mt-3"> Dokumenty ke stažení</h2>
+<div class=" mt-3 mb-3">
+       -kupní smlouva (vzor) <button type="button" class="btn btn-outline-secondary"> <i class="bi bi-file-earmark-pdf"></i> (PDF)</button> 
+     <div class="mb-3 mt-3">  -chovatelský řád <button type="button" class="btn btn-outline-secondary"> <i class="bi bi-file-earmark-pdf"></i>  (PDF)</button> </div>
+       -základní checklist výbavy <button type="button" class="btn btn-outline-secondary"> <i class="bi bi-file-earmark-pdf"></i>  (PDF)</button> 
 
+</div>
+</section>
 
+ <section class="text-o-jedincich py-4 fs-5 bg-light">
+      <div class="container">
+        <h2 class="h1 text-center mb-4 mt-3"> Očekávání po odeslání</h2>
+        <p>
+       Po odeslání formuláře se ti vždy ozveme co nejdříve, obvykle do 24–48 hodin.
+        Kontaktujeme tě e-mailem nebo telefonicky podle toho, co uvedeš.
+         Pokud bychom měli větší počet dotazů, může se reakce o trochu zpozdit, 
+         ale nikdy tvou poptávku neignorujeme a dáme vědět, že jsme ji přijali.
+</p>
+<p>
+V navazující komunikaci si společně projdeme tvoje preference a odpovíme na otázky týkající se chovu, vrhů nebo aktuálně dostupných mláďat. 
+Domluvíme se na dalším kroku — může to být návštěva, upřesnění rezervace nebo poslání dalších informací a fotografií.
+ Cílem je, aby sis mohl/a v klidu rozhodnout a měl/a všechny potřebné informace předem.
+        </p>
+      </div>
+    </section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.umd.js"></script>
+  <script>
+    Fancybox.bind("[data-fancybox]", {});
+  </script>
 
 </body>
 
