--- a/stene.html
+++ b/stene.html
@@ -26,17 +26,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Domů</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Naše zvířata</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Štěňata</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">O plemeni + péče</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Kontakt a rezervace</a></li>
+                   <li class="nav-item"><a class="nav-link" href="nase_zvirata.html">Naše zvířata</a></li>
+                    <li class="nav-item"><a class="nav-link" href="stene.html">Štěňata</a></li>
+                    <li class="nav-item"><a class="nav-link" href="o_plemeni.html">O plemeni + péče</a></li>
+                    <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt a rezervace</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <div class="container">
-        <h2 class="h1 text-center mb-5 mt-5">Naši chovní jedinci</h2>
+        <h2 class="h1 text-center mb-5 mt-5">Naše štěňata</h2>
         <div class="row g-4">
             <div class="col-md-6 col-xl-3">
                 <div class="card">
@@ -236,7 +236,7 @@
     </section>
     <section class="">
         <h2 class="h1 text-center mb-4 py-4">FAQ</h2>
-        <section class="fs-5 mb-3 py-4">
+        <section class="fs-5 mb-3 py-4 container">
             <div>
                 <div class="accordion accordion-flush py-4 mb-3" id="accordionFlushExample">
                     <div class="accordion-item bg-light">
