--- a/nase_zvirata.html
+++ b/nase_zvirata.html
@@ -27,10 +27,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="#">Domů</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Naše zvířata</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Štěňata</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">O plemeni + péče</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Kontakt a rezervace</a></li>
+         <li class="nav-item"><a class="nav-link" href="nase_zvirata.html">Naše zvířata</a></li>
+                    <li class="nav-item"><a class="nav-link" href="stene.html">Štěňata</a></li>
+                    <li class="nav-item"><a class="nav-link" href="o_plemeni.html">O plemeni + péče</a></li>
+                    <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt a rezervace</a></li>
         </ul>
       </div>
     </div>
