--- a/o_plemeni.html
+++ b/o_plemeni.html
@@ -2,38 +2,38 @@
 <html lang="cs">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Štěňata – Zvířátka</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Chovní jedinci – Zvířátka</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.css" />
-  <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.css" />
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-md bg-success navbar-dark">
-    <div class="container">
-      <a class="navbar-brand fs-3 fw-bold text-white" href="#">
-        <i class="bi bi-gitlab fs-1 text-white"></i> Zvířátka
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Domů</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Naše zvířata</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Štěňata</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">O plemeni + péče</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Kontakt a rezervace</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-md bg-success navbar-dark">
+        <div class="container">
+            <a class="navbar-brand fs-3 fw-bold text-white" href="#">
+                <i class="bi bi-gitlab fs-1 text-white"></i> Zvířátka
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="#">Domů</a></li>
+                    <li class="nav-item"><a class="nav-link" href="nase_zvirata.html">Naše zvířata</a></li>
+                    <li class="nav-item"><a class="nav-link" href="stene.html">Štěňata</a></li>
+                    <li class="nav-item"><a class="nav-link" href="o_plemeni.html">O plemeni + péče</a></li>
+                    <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt a rezervace</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
   <h2 class="h1 text-center mb-5 mt-5">O plemeni & Péče</h2>
   <div class="container">
@@ -142,6 +142,11 @@
     </ul>
   </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.umd.js"></script>
+  <script>
+    Fancybox.bind("[data-fancybox]", {});
+  </script>
 </body>
 
 </html>
