--- a/kontakt.html
+++ b/kontakt.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Chovní jedinci – Zvířátka</title>
+    <title>Kontakt – Zvířátka</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -25,7 +25,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Domů</a></li>
+                      <li class="nav-item"><a class="nav-link active" href="domu.html">Domů</a></li>
                     <li class="nav-item"><a class="nav-link" href="nase_zvirata.html">Naše zvířata</a></li>
                     <li class="nav-item"><a class="nav-link" href="stene.html">Štěňata</a></li>
                     <li class="nav-item"><a class="nav-link" href="o_plemeni.html">O plemeni + péče</a></li>
@@ -80,13 +80,15 @@
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 
                 </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">jméno</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+               <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Telefon</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
                 </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">telefon</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Jméno</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
                 </div>
                 -Jaké štěně budete chít?
                 <div class="mb-3 form-check">
@@ -97,9 +99,10 @@
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">budoucí vrh</label>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">kde bude zvíře bydlet?</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                 <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Kde bude zvíře bydlet</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
                 </div>
                 -Mate již zkušenosti se zvířaty?
                 <div class="mb-3 form-check">
@@ -114,9 +117,10 @@
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">jen malé</label>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">– Kolik času budete mít na péči</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Kolik času budete mít na péči</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
                 </div>
               
                  <a href="#" class="btn btn-outline-dark w-100 mb-2">
