--- a/stene.html
+++ b/stene.html
@@ -25,8 +25,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Domů</a></li>
-                   <li class="nav-item"><a class="nav-link" href="nase_zvirata.html">Naše zvířata</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="domu.html">Domů</a></li>
+                    <li class="nav-item"><a class="nav-link" href="nase_zvirata.html">Naše zvířata</a></li>
                     <li class="nav-item"><a class="nav-link" href="stene.html">Štěňata</a></li>
                     <li class="nav-item"><a class="nav-link" href="o_plemeni.html">O plemeni + péče</a></li>
                     <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt a rezervace</a></li>
