--- a/o_plemeni.html
+++ b/o_plemeni.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Chovní jedinci – Zvířátka</title>
+    <title>O plemeni – Zvířátka</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -25,7 +25,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Domů</a></li>
+                      <li class="nav-item"><a class="nav-link active" href="domu.html">Domů</a></li>
                     <li class="nav-item"><a class="nav-link" href="nase_zvirata.html">Naše zvířata</a></li>
                     <li class="nav-item"><a class="nav-link" href="stene.html">Štěňata</a></li>
                     <li class="nav-item"><a class="nav-link" href="o_plemeni.html">O plemeni + péče</a></li>
