--- a/nase_zvirata.html
+++ b/nase_zvirata.html
@@ -80,7 +80,7 @@
         </div>
         <div class="col-md-6 col-xl-3">
           <div class="card">
-              <img src="pes2.jpg" class="card-img-top" alt="Pes A" />
+              <img src="chov.jpg" class="card-img-top" alt="Pes A" />
             </a>
             <div class="card-body">
               <h3 class="card-title">Špidla</h3>
@@ -101,7 +101,7 @@
               <img src="pes3.jpg" class="card-img-top" alt="Pes A" />
             </a>
             <div class="card-body">
-              <h3 class="card-title">Žeryk</h3>
+              <h3 class="card-title">Hugo</h3>
               <p class="card-text">
                 Pohrkaný a velmi aktivní pes. <br>
                 <strong>Narozen:</strong> 21. 1. 2022<br>
@@ -116,7 +116,7 @@
         </div>
         <div class="col-md-6 col-xl-3">
           <div class="card">
-              <img src="pes4.jpg" class="card-img-top" alt="Fenka B" />
+              <img src="pes7.jpg" class="card-img-top" alt="Fenka B" />
             </a>
             <div class="card-body">
               <h3 class="card-title">Bella</h3>
