--- a/domu.html
+++ b/domu.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+  
   <nav class="navbar navbar-expand-md bg-success navbar-dark">
     <div class="container">
       <a class="navbar-brand fs-3 fw-bold text-white" href="#">
@@ -34,13 +34,10 @@
       </div>
     </div>
   </nav>
-<section class="container text-center">
-  <h2 class="h1 text-center mt-5 fs-1 mb-1">Zvířátka</h2>
-  <div class="fs-5 mb-5"> "U nás se mají všechna zvířátka dobře."
-</section>
-
-
-
+  <section class="container text-center">
+    <h2 class="h1 text-center mt-5 fs-1 mb-1">Zvířátka</h2>
+    <div class="fs-5 mb-5"> "U nás se mají všechna zvířátka dobře."
+  </section>
   <div class="text-center my-4">
     <a href="stene.html" class="btn btn-success btn-lg me-2">
       Dostupná mláďata
@@ -141,27 +138,24 @@
             </div>
           </div>
     </section>
-
-  <section class="oceneni container text-center">
-   <h2 class="h1 text-center mb-5">Ocenění</h2>
-  <div><i class="bi bi-award fs-1 mb-3 text-warning "> </i> <br></div>
-<div class="fs-5"> <b>Ocenění za zodpovědný chov</b>  <br>
-Chovatelská stanice je dlouhodobě oceňována za důraz na zdraví, welfare a vyrovnanou povahu chovných jedinců.
- Přístup založený na kvalitní péči, socializaci a respektu ke zvířatům patří mezi hlavní hodnoty tohoto chovu.
- <div><i class="bi bi-award-fill fs-1 mb-3 text-warning "> </i> <br></div>
-<div class="fs-5"> <b>Ocenění za přístup k budoucím majitelům</b> <br>
-Stanice si získala uznání za otevřenou komunikaci, individuální přístup k zájemcům a ochotu poskytovat podporu i po předání štěněte.
- Důvěra, transparentnost a lidský přístup jsou zde samozřejmostí.
-  </section>
-
-
+    <section class="oceneni container text-center">
+      <h2 class="h1 text-center mb-5">Ocenění</h2>
+      <div><i class="bi bi-award fs-1 mb-3 text-warning "> </i> <br></div>
+      <div class="fs-5"> <b>Ocenění za zodpovědný chov</b> <br>
+        Chovatelská stanice je dlouhodobě oceňována za důraz na zdraví, welfare a vyrovnanou povahu chovných jedinců.
+        Přístup založený na kvalitní péči, socializaci a respektu ke zvířatům patří mezi hlavní hodnoty tohoto chovu.
+        <div><i class="bi bi-award-fill fs-1 mb-3 text-warning "> </i> <br></div>
+        <div class="fs-5"> <b>Ocenění za přístup k budoucím majitelům</b> <br>
+          Stanice si získala uznání za otevřenou komunikaci, individuální přístup k zájemcům a ochotu poskytovat podporu
+          i po předání štěněte.
+          Důvěra, transparentnost a lidský přístup jsou zde samozřejmostí.
+    </section>
     <section class="rezenze py-5 container">
       <div class="container-fluid">
         <h2 class="h1 text-center mb-5">Rezenze</h2>
 
         <div class="row">
-         
-       
+
           <div class="col-xl-3 mb-2 ">
             <div class="card">
               <div class="card-header">
@@ -177,7 +171,8 @@ Stanice si získala uznání za otevřenou komunikaci, individuální přístup 
                   <i class="bi bi-person-circle fs-1 mb-3"></i>
                   <h5 class="card-title">Jana K.</h5>
                   <p class="card-text ">
-                   Velmi vstřícný přístup a skvělá komunikace. Štěně bylo perfektně socializované a od prvního dne bez problémů zapadlo do rodiny.
+                    Velmi vstřícný přístup a skvělá komunikace. Štěně bylo perfektně socializované a od prvního dne bez
+                    problémů zapadlo do rodiny.
                   </p>
                 </div>
               </section>
@@ -191,6 +186,7 @@ Stanice si získala uznání za otevřenou komunikaci, individuální přístup 
                 <i class="bi bi-star-fill text-warning"></i>
                 <i class="bi bi-star-fill text-warning"></i>
                 <i class="bi bi-star text-warning"></i>
+
               </div>
 
               <section>
@@ -198,7 +194,8 @@ Stanice si získala uznání za otevřenou komunikaci, individuální přístup 
                   <i class="bi bi-person-circle fs-1 mb-3"></i>
                   <h5 class="card-title">Petr Novotný</h5>
                   <p class="card-text ">
-                  Je vidět, že psům věnují opravdu hodně péče. Vše bylo jasně vysvětleno, žádný nátlak, jen klidný a férový přístup.
+                    Je vidět, že psům věnují opravdu hodně péče. Vše bylo jasně vysvětleno, žádný nátlak, jen klidný a
+                    férový přístup.
                   </p>
                 </div>
               </section>
@@ -219,7 +216,8 @@ Stanice si získala uznání za otevřenou komunikaci, individuální přístup 
                   <i class="bi bi-person-circle fs-1 mb-3"></i>
                   <h5 class="card-title">Lucie M.</h5>
                   <p class="card-text ">
-                  Příjemná zkušenost, chov působí čistě a zodpovědně. Ocenila jsem hlavně ochotu odpovídat na dotazy i po odběru štěněte.
+                    Příjemná zkušenost, chov působí čistě a zodpovědně. Ocenila jsem hlavně ochotu odpovídat na dotazy i
+                    po odběru štěněte.
                   </p>
                 </div>
               </section>
@@ -233,6 +231,7 @@ Stanice si získala uznání za otevřenou komunikaci, individuální přístup 
                 <i class="bi bi-star-fill text-warning"></i>
                 <i class="bi bi-star-fill text-warning"></i>
                 <i class="bi bi-star text-warning"></i>
+
               </div>
 
               <section>
@@ -240,7 +239,8 @@ Stanice si získala uznání za otevřenou komunikaci, individuální přístup 
                   <i class="bi bi-person-circle fs-1 mb-3"></i>
                   <h5 class="card-title">Martin Dvořák</h5>
                   <p class="card-text ">
-                   Profesionální a zároveň lidský přístup. Je znát dlouholetá praxe a láska ke psům. Stanici můžu s klidem doporučit dál.
+                    Profesionální a zároveň lidský přístup. Je znát dlouholetá praxe a láska ke psům. Stanici můžu s
+                    klidem doporučit dál.
                   </p>
                 </div>
               </section>
