--- a/kontakt.html
+++ b/kontakt.html
@@ -71,23 +71,23 @@
                         Před budovou je malé parkoviště. <br>
                         Otvírací doba 10-16h, od pondělí do pátku.(ale je lepší se ohlásit dopředu)
     </section>
-    <h2 class="h1 text-center bg-light mb-0"> Formulář</h2>
+    <h2 class="h1 text-center bg-light mb-0"> Dotazník</h2>
     <section class=" fs-5 bg-light mt-0">
         <div class="container">
             <form>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                     <input type="email" class="form-control" placeholder="Váš email">
 
                 </div>
                <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Telefon</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="email" class="form-control" placeholder="Váš telefon">
 
                 </div>
                     <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Jméno</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                      <input type="email" class="form-control" placeholder="Vaše jméno">
 
                 </div>
                 -Jaké štěně budete chít?
@@ -119,16 +119,16 @@
                 </div>
                   <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Kolik času budete mít na péči</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                 <textarea class="form-control" rows="4" placeholder=""></textarea>
 
                 </div>
               
                  <a href="#" class="btn btn-outline-dark w-100 mb-2">
-                 <p class="fs-5 mt-3"> Odeslat formulář</p>   
+                 <p class="fs-5 mt-3"> Odeslat dotazník</p>   
                 </a>
             </section>
             </form>
-<section class="container">
+<section class="container text-center">
 <h2 class="h1 text-center mb-0 mt-3"> Dokumenty ke stažení</h2>
 <div class=" mt-3 mb-3">
        -kupní smlouva (vzor) <button type="button" class="btn btn-outline-secondary"> <i class="bi bi-file-earmark-pdf"></i> (PDF)</button> 
