--- a/domu.html
+++ b/domu.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-  
   <nav class="navbar navbar-expand-md bg-success navbar-dark">
     <div class="container">
       <a class="navbar-brand fs-3 fw-bold text-white" href="#">
@@ -60,7 +59,7 @@
         </p>
       </div>
       <div class="col-md-3 mb-3">
-        <img class="img-fluid" src="pes9.jpg" alt="" />
+        <img class="img-fluid" src="pes9.jpg" alt="" style="border-radius: 15px;"/>
       </div>
     </div>
   </div>
