--- a/domu.html
+++ b/domu.html
@@ -35,7 +35,7 @@
   </nav>
   <section class="container text-center">
     <h2 class="h1 text-center mt-5 fs-1 mb-1">Zvířátka</h2>
-    <div class="fs-5 mb-5"> "U nás se mají všechna zvířátka dobře."
+    <div class="fs-5 mb-5"> "U nás se mají všechna zvířátka dobře." > </div>
   </section>
   <div class="text-center my-4">
     <a href="stene.html" class="btn btn-success btn-lg me-2">
@@ -59,230 +59,236 @@
         </p>
       </div>
       <div class="col-md-3 mb-3">
-        <img class="img-fluid" src="pes9.jpg" alt="" style="border-radius: 15px;"/>
+        <img class="img-fluid" src="pes9.jpg" alt="" style="border-radius: 15px;" />
       </div>
     </div>
   </div>
-  <section>
-    <section class="postavy py-5 mb-5">
-      <div class="container">
-        <h2 class="h1 text-center mb-5"></h2>
-        <div class="row g-4">
-          <div class="col-md-6 col-xl-3">
-            <div class="card">
-              <img src="pes1.jpg" class="card-img-top" alt="Pes A" />
+
+  <section class="postavy py-5 mb-5">
+    <div class="container">
+
+      <h2 class="h1 text-center mb-5"></h2>
+      <div class="row g-4">
+        <div class="col-md-6 col-xl-3">
+          <div class="card">
+            <img src="pes1.jpg" class="card-img-top" alt="Pes A" />
+
+            <div class="card-body">
+              <h3 class="card-title">Rex</h3>
+              <p class="card-text">
+                Volný <br>
+                <strong>Narozen:</strong> 12. 5. 2020
+              </p>
+
+
+              <a href="#" class="btn btn-outline-dark w-100">
+                Detail
               </a>
-              <div class="card-body">
-                <h3 class="card-title">Rex</h3>
-                <p class="card-text">
-                  Volný <br>
-                  <strong>Narozen:</strong> 12. 5. 2020<br>
-
-                </p>
-                <a href="#" class="btn btn-outline-dark w-100">
-                  Detail
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-xl-3">
-            <div class="card">
-              <img src="pes3.jpg" class="card-img-top" alt="Pes A" />
-              </a>
-              <div class="card-body">
-                <h3 class="card-title">Hugo</h3>
-                <p class="card-text">
-                  Zarezervován <br>
-                  <strong>Narozen:</strong> 21. 1. 2022<br>
-
-                </p>
-                <a href="#" class="btn btn-outline-dark w-100">
-                  Detail
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-xl-3">
-            <div class="card">
-              <img src="pes4.jpg" class="card-img-top" alt="Pes A" />
-              </a>
-              <div class="card-body">
-                <h3 class="card-title">Brita</h3>
-                <p class="card-text">
-                  Volná <br>
-                  <strong>Narozen:</strong> 12. 5. 2020<br>
-
-                </p>
-                <a href="#" class="btn btn-outline-dark w-100">
-                  Detail
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-xl-3">
-            <div class="card">
-              <img src="pes8.jpg" class="card-img-top" alt="Pes A" />
-              </a>
-              <div class="card-body">
-                <h3 class="card-title">Jack</h3>
-                <p class="card-text">
-                  V novém domově<br>
-                  <strong>Narozen:</strong> 5. 12. 2024<br>
-
-                </p>
-                <a href="#" class="btn btn-outline-dark w-100">
-                  Detail
-                </a>
-              </div>
-            </div>
-          </div>
-    </section>
-    <section class="oceneni container text-center">
-      <h2 class="h1 text-center mb-5">Ocenění</h2>
-      <div><i class="bi bi-award fs-1 mb-3 text-warning "> </i> <br></div>
-      <div class="fs-5"> <b>Ocenění za zodpovědný chov</b> <br>
-        Chovatelská stanice je dlouhodobě oceňována za důraz na zdraví, welfare a vyrovnanou povahu chovných jedinců.
-        Přístup založený na kvalitní péči, socializaci a respektu ke zvířatům patří mezi hlavní hodnoty tohoto chovu.
-        <div><i class="bi bi-award-fill fs-1 mb-3 text-warning "> </i> <br></div>
-        <div class="fs-5"> <b>Ocenění za přístup k budoucím majitelům</b> <br>
-          Stanice si získala uznání za otevřenou komunikaci, individuální přístup k zájemcům a ochotu poskytovat podporu
-          i po předání štěněte.
-          Důvěra, transparentnost a lidský přístup jsou zde samozřejmostí.
-    </section>
-    <section class="rezenze py-5 container">
-      <div class="container-fluid">
-        <h2 class="h1 text-center mb-5">Rezenze</h2>
-
-        <div class="row">
-
-          <div class="col-xl-3 mb-2 ">
-            <div class="card">
-              <div class="card-header">
-                <i class="bi bi-star-fill text-warning "></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-              </div>
-
-              <section>
-                <div class="card-body ">
-                  <i class="bi bi-person-circle fs-1 mb-3"></i>
-                  <h5 class="card-title">Jana K.</h5>
-                  <p class="card-text ">
-                    Velmi vstřícný přístup a skvělá komunikace. Štěně bylo perfektně socializované a od prvního dne bez
-                    problémů zapadlo do rodiny.
-                  </p>
-                </div>
-              </section>
-            </div>
-          </div>
-          <div class="col-xl-3 mb-2">
-            <div class="card">
-              <div class="card-header">
-                <i class="bi bi-star-fill text-warning "></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star text-warning"></i>
-
-              </div>
-
-              <section>
-                <div class="card-body ">
-                  <i class="bi bi-person-circle fs-1 mb-3"></i>
-                  <h5 class="card-title">Petr Novotný</h5>
-                  <p class="card-text ">
-                    Je vidět, že psům věnují opravdu hodně péče. Vše bylo jasně vysvětleno, žádný nátlak, jen klidný a
-                    férový přístup.
-                  </p>
-                </div>
-              </section>
-            </div>
-          </div>
-          <div class="col-xl-3 mb-2">
-            <div class="card">
-              <div class="card-header">
-                <i class="bi bi-star-fill text-warning "></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star text-warning"></i>
-                <i class="bi bi-star text-warning"></i>
-              </div>
-
-              <section>
-                <div class="card-body ">
-                  <i class="bi bi-person-circle fs-1 mb-3"></i>
-                  <h5 class="card-title">Lucie M.</h5>
-                  <p class="card-text ">
-                    Příjemná zkušenost, chov působí čistě a zodpovědně. Ocenila jsem hlavně ochotu odpovídat na dotazy i
-                    po odběru štěněte.
-                  </p>
-                </div>
-              </section>
-            </div>
-          </div>
-          <div class="col-xl-3 mb-2">
-            <div class="card">
-              <div class="card-header">
-                <i class="bi bi-star-fill text-warning "></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star-fill text-warning"></i>
-                <i class="bi bi-star text-warning"></i>
-
-              </div>
-
-              <section>
-                <div class="card-body ">
-                  <i class="bi bi-person-circle fs-1 mb-3"></i>
-                  <h5 class="card-title">Martin Dvořák</h5>
-                  <p class="card-text ">
-                    Profesionální a zároveň lidský přístup. Je znát dlouholetá praxe a láska ke psům. Stanici můžu s
-                    klidem doporučit dál.
-                  </p>
-                </div>
-              </section>
             </div>
           </div>
         </div>
-        </h2>
+        <div class="col-md-6 col-xl-3">
+          <div class="card">
+            <img src="pes3.jpg" class="card-img-top" alt="Pes A" />
+
+            <div class="card-body">
+              <h3 class="card-title">Hugo</h3>
+              <p class="card-text">
+                Zarezervován <br>
+                <strong>Narozen:</strong> 21. 1. 2022<br>
+
+              </p>
+              <a href="#" class="btn btn-outline-dark w-100">
+                Detail
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xl-3">
+          <div class="card">
+            <img src="pes4.jpg" class="card-img-top" alt="Pes A" />
+
+            <div class="card-body">
+              <h3 class="card-title">Brita</h3>
+              <p class="card-text">
+                Volná <br>
+                <strong>Narozen:</strong> 12. 5. 2020<br>
+
+              </p>
+              <a href="#" class="btn btn-outline-dark w-100">
+                Detail
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xl-3">
+          <div class="card">
+            <img src="pes8.jpg" class="card-img-top" alt="Pes A" />
+
+            <div class="card-body">
+              <h3 class="card-title">Jack</h3>
+              <p class="card-text">
+                V novém domově<br>
+                <strong>Narozen:</strong> 5. 12. 2024<br>
+
+              </p>
+              <a href="#" class="btn btn-outline-dark w-100">
+                Detail
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
-    <section>
-      <section class=" fs-5 bg-light mt-0">
-        <h2 class="h1 text-center bg mb-5 mt-0">Máte dotaz?</h2>
-        <div class="container">
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email</label>
-              <input type="email" class="form-control" placeholder="Váš email">
+    </div>
+  </section>
+  <section class="oceneni container text-center">
+    <h2 class="h1 text-center mb-5">Ocenění</h2>
+    <div><i class="bi bi-award fs-1 mb-3 text-warning "> </i> <br></div>
+    <div class="fs-5"> <b>Ocenění za zodpovědný chov</b> <br>
+      Chovatelská stanice je dlouhodobě oceňována za důraz na zdraví, welfare a vyrovnanou povahu chovných jedinců.
+      Přístup založený na kvalitní péči, socializaci a respektu ke zvířatům patří mezi hlavní hodnoty tohoto chovu.>
+    </div>
+    <div><i class="bi bi-award-fill fs-1 mb-3 text-warning "> </i> <br></div>
+    <div class="fs-5"> <b>Ocenění za přístup k budoucím majitelům</b> <br>
+      Stanice si získala uznání za otevřenou komunikaci, individuální přístup k zájemcům a ochotu poskytovat podporu
+      i po předání štěněte.
+      Důvěra, transparentnost a lidský přístup jsou zde samozřejmostí.>
+
+    </div>
+  </section>
+  <section class="rezenze py-5 container">
+    <div class="container-fluid">
+      <h2 class="h1 text-center mb-5">Rezenze</h2>
+
+      <div class="row">
+
+        <div class="col-xl-3 mb-2 ">
+          <div class="card">
+            <div class="card-header">
+              <i class="bi bi-star-fill text-warning "></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+            </div>
+
+            <section>
+              <div class="card-body ">
+                <i class="bi bi-person-circle fs-1 mb-3"></i>
+                <h3 class="card-title">Jana K.</h3>
+                <p class="card-text ">
+                  Velmi vstřícný přístup a skvělá komunikace. Štěně bylo perfektně socializované a od prvního dne bez
+                  problémů zapadlo do rodiny.
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="col-xl-3 mb-2">
+          <div class="card">
+            <div class="card-header">
+              <i class="bi bi-star-fill text-warning "></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star text-warning"></i>
 
             </div>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">jméno</label>
-              <input type="text" class="form-control" placeholder="Vaše jméno">
+
+            <section>
+              <div class="card-body ">
+                <i class="bi bi-person-circle fs-1 mb-3"></i>
+                <h3 class="card-title">Petr Novotný</h3>
+                <p class="card-text ">
+                  Je vidět, že psům věnují opravdu hodně péče. Vše bylo jasně vysvětleno, žádný nátlak, jen klidný a
+                  férový přístup.
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="col-xl-3 mb-2">
+          <div class="card">
+            <div class="card-header">
+              <i class="bi bi-star-fill text-warning "></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star text-warning"></i>
+              <i class="bi bi-star text-warning"></i>
+            </div>
+
+            <section>
+              <div class="card-body ">
+                <i class="bi bi-person-circle fs-1 mb-3"></i>
+                <h3 class="card-title">Lucie M.</h3>
+                <p class="card-text ">
+                  Příjemná zkušenost, chov působí čistě a zodpovědně. Ocenila jsem hlavně ochotu odpovídat na dotazy i
+                  po odběru štěněte.
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="col-xl-3 mb-2">
+          <div class="card">
+            <div class="card-header">
+              <i class="bi bi-star-fill text-warning "></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star text-warning"></i>
 
             </div>
 
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Dotaz</label>
-              <textarea class="form-control" rows="4" placeholder="Váš dotaz"></textarea>
+            <section>
+              <div class="card-body ">
+                <i class="bi bi-person-circle fs-1 mb-3"></i>
+                <h3 class="card-title">Martin Dvořák</h3>
+                <p class="card-text ">
+                  Profesionální a zároveň lidský přístup. Je znát dlouholetá praxe a láska ke psům. Stanici můžu s
+                  klidem doporučit dál.
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+      </div>
 
-            </div>
+    </div>
+  </section>
 
-            <a href="#" class="btn btn-outline-dark w-100 mb-2">
-              <p class="fs-5 mt-3"> Odeslat formulář</p>
-            </a>
-      </section>
+  <section class=" fs-5 bg-light mt-0">
+    <h2 class="h1 text-center bg mb-5 mt-0">Máte dotaz?</h2>
+    <div class="container">
 
-    </section>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" id="email" class="form-control" placeholder="Váš email">
+      </div>
+      <div class="mb-3">
+        <label for="name">Jméno</label>
+        <input type="text" id="name" class="form-control">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.umd.js"></script>
-    <script>
-      Fancybox.bind("[data-fancybox]", {});
-    </script>
+      </div>
+
+      <div class="mb-3">
+        <label for="message">Dotaz</label>
+        <textarea id="message" class="form-control"></textarea>
+
+      </div>
+
+      <a href="#" class="btn btn-outline-dark w-100 mb-2">
+        <p class="fs-5 mt-3"> Odeslat formulář</p>
+      </a>
+    </div>
+
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.umd.js"></script>
+  <script>
+    Fancybox.bind("[data-fancybox]", {});
+  </script>
 </body>
 
 </html>
