--- a/kontakt.html
+++ b/kontakt.html
@@ -25,7 +25,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                      <li class="nav-item"><a class="nav-link active" href="domu.html">Domů</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="domu.html">Domů</a></li>
                     <li class="nav-item"><a class="nav-link" href="nase_zvirata.html">Naše zvířata</a></li>
                     <li class="nav-item"><a class="nav-link" href="stene.html">Štěňata</a></li>
                     <li class="nav-item"><a class="nav-link" href="o_plemeni.html">O plemeni + péče</a></li>
@@ -61,105 +61,125 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="">
-                    <h2 class="h1 text-center mt-3"> <i class="bi bi-geo-alt-fill"></i> Kde nás najdete?</h2>
-                    <p class="mb-5 text-center fs-5">
-                        Naše stanice se nálézá na adrese, Na kopečku 123
-                        Pardubice, 533 03. <a
-                            href="https://www.google.com/maps/@50.0338358,15.9182234,17950m/data=!3m1!1e3?entry=ttu&g_ep=EgoyMDI1MTIwMi4wIKXMDSoASAFQAw%3D%3D">zde</a>
-                        <br>
-                        Před budovou je malé parkoviště. <br>
-                        Otvírací doba 10-16h, od pondělí do pátku.(ale je lepší se ohlásit dopředu)
+                <h2 class="h1 text-center mt-3"> <i class="bi bi-geo-alt-fill"></i> Kde nás najdete?</h2>
+                <p class="mb-5 text-center fs-5">
+                    Naše stanice se nálézá na adrese, Na kopečku 123
+                    Pardubice, 533 03. <a
+                        href="https://www.google.com/maps/@50.0338358,15.9182234,17950m/data=!3m1!1e3?entry=ttu&g_ep=EgoyMDI1MTIwMi4wIKXMDSoASAFQAw%3D%3D">zde</a>
+                    <br>
+                    Před budovou je malé parkoviště. <br>
+                    Otvírací doba 10-16h, od pondělí do pátku.(ale je lepší se ohlásit dopředu)
+            </div>
+        </div>
+
+
     </section>
     <h2 class="h1 text-center bg-light mb-0"> Dotazník</h2>
     <section class=" fs-5 bg-light mt-0">
         <div class="container">
-            <form>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email</label>
-                     <input type="email" class="form-control" placeholder="Váš email">
 
-                </div>
-               <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Telefon</label>
-                    <input type="email" class="form-control" placeholder="Váš telefon">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+        <input type="email" id="email" class="form-control" placeholder="Váš email">
 
-                </div>
-                    <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Jméno</label>
-                      <input type="email" class="form-control" placeholder="Vaše jméno">
+            </div>
+            <div class="mb-3">
+                <label for="telefon" class="form-label">Telefon</label>
+               <input type="text" id="telefon" class="form-control" placeholder="Váš telefon"> 
+            </div>
+            <div class="mb-3">
+                <label for="jmeno" class="form-label">Jméno</label>
+                <input type="text" id="jmeno" class="form-control" placeholder="Vaše jméno">
+            </div>
+            Jaké štěně budete chít?
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="born">
+                <label class="form-check-label" for="born">Již narozené</label>
+            </div>
 
-                </div>
-                -Jaké štěně budete chít?
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">již narozené</label>
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">budoucí vrh</label>
-                </div>
-                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Kde bude zvíře bydlet</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="future">
+                <label class="form-check-label" for="future">Budoucí vrh</label>
+            </div>
+            <div class="mb-3">
+                <label for="home" class="form-label">Kde bude zvíře bydlet</label>
+            <input type="text" class="form-control" id="housing">
 
-                </div>
-                -Mate již zkušenosti se zvířaty?
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">ano</label>
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">ne</label>
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">jen malé</label>
-                </div>
-                  <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Kolik času budete mít na péči</label>
-                 <textarea class="form-control" rows="4" placeholder=""></textarea>
+            </div>
 
-                </div>
-              
-                 <a href="#" class="btn btn-outline-dark w-100 mb-2">
-                 <p class="fs-5 mt-3"> Odeslat dotazník</p>   
-                </a>
-            </section>
-            </form>
-<section class="container text-center">
-<h2 class="h1 text-center mb-0 mt-3"> Dokumenty ke stažení</h2>
-<div class=" mt-3 mb-3">
-       -kupní smlouva (vzor) <button type="button" class="btn btn-outline-secondary"> <i class="bi bi-file-earmark-pdf"></i> (PDF)</button> 
-     <div class="mb-3 mt-3">  -chovatelský řád <button type="button" class="btn btn-outline-secondary"> <i class="bi bi-file-earmark-pdf"></i>  (PDF)</button> </div>
-       -základní checklist výbavy <button type="button" class="btn btn-outline-secondary"> <i class="bi bi-file-earmark-pdf"></i>  (PDF)</button> 
+            <p class="mt-3 mb-2">Máte již zkušenosti se zvířaty?</p>
 
+            <div class="form-check mb-2">
+                <input class="form-check-input" type="checkbox" id="exp-yes">
+                <label class="form-check-label" for="exp-yes">Ano</label>
+            </div>
+
+            <div class="form-check mb-2">
+                <input class="form-check-input" type="checkbox" id="exp-no">
+                <label class="form-check-label" for="exp-no">Ne</label>
+            </div>
+
+            <div class="form-check mb-2">
+                <input class="form-check-input" type="checkbox" id="exp-small">
+                <label class="form-check-label" for="exp-small">Jen malé</label>
+            </div>
+           <div class="mb-3">
+  <label for="careTime" class="form-label">
+    Kolik času budete mít na péči
+  </label>
+
+  <textarea
+    id="careTime"
+    class="form-control"
+    rows="4"
+    placeholder="Např. kolik hodin denně, kdo se bude starat…"
+  ></textarea>
 </div>
-</section>
 
- <section class="text-o-jedincich py-4 fs-5 bg-light">
-      <div class="container">
-        <h2 class="h1 text-center mb-4 mt-3"> Očekávání po odeslání</h2>
-        <p>
-       Po odeslání formuláře se ti vždy ozveme co nejdříve, obvykle do 24–48 hodin.
-        Kontaktujeme tě e-mailem nebo telefonicky podle toho, co uvedeš.
-         Pokud bychom měli větší počet dotazů, může se reakce o trochu zpozdit, 
-         ale nikdy tvou poptávku neignorujeme a dáme vědět, že jsme ji přijali.
-</p>
-<p>
-V navazující komunikaci si společně projdeme tvoje preference a odpovíme na otázky týkající se chovu, vrhů nebo aktuálně dostupných mláďat. 
-Domluvíme se na dalším kroku — může to být návštěva, upřesnění rezervace nebo poslání dalších informací a fotografií.
- Cílem je, aby sis mohl/a v klidu rozhodnout a měl/a všechny potřebné informace předem.
-        </p>
-      </div>
+            <a href="#" class="btn btn-outline-dark w-100 mb-2">
+                <p class="fs-5 mt-3"> Odeslat dotazník</p>
+            </a>
+        </div>
+
     </section>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.umd.js"></script>
-  <script>
-    Fancybox.bind("[data-fancybox]", {});
-  </script>
+    <section class="container text-center">
+        <h2 class="h1 text-center mb-0 mt-3"> Dokumenty ke stažení</h2>
+        <div class=" mt-3 mb-3">
+            -kupní smlouva (vzor) <button type="button" class="btn btn-outline-secondary"> <i
+                    class="bi bi-file-earmark-pdf"></i> (PDF)</button>
+            <div class="mb-3 mt-3"> -chovatelský řád <button type="button" class="btn btn-outline-secondary"> <i
+                        class="bi bi-file-earmark-pdf"></i> (PDF)</button> </div>
+            -základní checklist výbavy <button type="button" class="btn btn-outline-secondary"> <i
+                    class="bi bi-file-earmark-pdf"></i> (PDF)</button>
+
+        </div>
+    </section>
+
+    <section class="text-o-jedincich py-4 fs-5 bg-light">
+        <div class="container">
+            <h2 class="h1 text-center mb-4 mt-3"> Očekávání po odeslání</h2>
+            <p>
+                Po odeslání formuláře se ti vždy ozveme co nejdříve, obvykle do 24–48 hodin.
+                Kontaktujeme tě e-mailem nebo telefonicky podle toho, co uvedeš.
+                Pokud bychom měli větší počet dotazů, může se reakce o trochu zpozdit,
+                ale nikdy tvou poptávku neignorujeme a dáme vědět, že jsme ji přijali.
+            </p>
+            <p>
+                V navazující komunikaci si společně projdeme tvoje preference a odpovíme na otázky týkající se chovu,
+                vrhů nebo aktuálně dostupných mláďat.
+                Domluvíme se na dalším kroku — může to být návštěva, upřesnění rezervace nebo poslání dalších informací
+                a fotografií.
+                Cílem je, aby sis mohl/a v klidu rozhodnout a měl/a všechny potřebné informace předem.
+            </p>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.umd.js"></script>
+    <script>
+        Fancybox.bind("[data-fancybox]", {});
+    </script>
 
 </body>
 
